# Seq-seq

./: .gitignore  TODO.md  generate.py  pyproject.toml  train.py  train_grpo.py
scripts/: convert2bin.py  convert_mutili.py  points_to_vae_code.py  test.npz  test_4_6.npz  visual.py
src/: brep_builder.py  checkcpoint_mang.py  common.py  config.py  datamodule.py  engine.py  fla.py  forge.py  gpt.py  gptv2.py  gptv3.py  model.py  model_config.yaml  optim.py  sampler.py  tokenizer.py  vq_vae.py
test/: 00000131_945244874ed84e599987daa9_step_000_6_12.npz  00000133_08b739e0511f4305b161cd05_step_000_6_12.npz  00000144_2fc54fcd110d4f49969163c4_step_007_8_18.npz  00000159_48a3f2e6f67a4aea9d6d097b_step_000_9_18.npz  00997742_f95e288d862fb5b47e89a025_step_000_70_204.npz  00997774_8affbfcd48e8183b371cf995_step_000_66_177.npz
