[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ForgeTrace"
version = "0.1.0"
description = "Brep Generation"
requires-python = ">=3.10"
dependencies = [
    "lightning>=2.2.0",
    "triton>=2.2.0",
    "numpy",
    "einops",       
    "wandb",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]